<resources>
    <string name="app_name">PLANALOG</string>
    <!--   splash   -->
    <string name="splash_tagline">일정 관리와 일상 공유를 동시에</string>
    <!--   login start   -->
    <string name="login_ok">로그인 되었습니다!</string>
    <!--  login start set  -->
    <string name="login">소셜 로그인</string>
    <string name="hello1">안녕하세요!</string>
    <string name="hello2"> 입니다.</string>
    <string name="hello3">에서 사용할</string>
    <string name="nickname_ex">ex) 플라나</string>
    <string name="nickname_ok">확인</string>
    <string name="pick_nickname">이름 (닉네임)을 정해주세요</string>
    <string name="blocknickname">이미 존재하는 닉네임입니다.</string>
    <!--   onboard qna   -->
    <string name="ready"> 준비중...</string>
    <string name="on_ready"> 준비 완료!</string>
    <string name="Start"> Start</string>
    <!--   mypage   -->
    <string name="my_name"> 이름</string>
    <string name="blog"> 블로그</string>
    <string name="friend"> 친구</string>
    <string name="intro_me"> 소개</string>
    <string name="profile_edit"> 프로필 편집</string>
    <string name="moment"> Moment</string>
    <string name="story"> Story</string>
    <!--   mypageedit   -->
    <string name="edit_profile"> 프로필 편집</string>
    <string name="name"> 이름 (닉네임)</string>
    <string name="introduce">소개 글</string>
    <string name="link">링크</string>
    <string name="addlink">링크 추가하기</string>
    <string name="termsofuse">이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="logout">로그아웃</string>
    <string name="account_quit"> 회원탈퇴</string>
    <string name="ok"> 확인</string>
    <string name="editplaney">플라니 설정</string>
    <string name="planey">플라니</string>
    <string name="quit_name"> 이름</string>
    <string name="check_quit"> 정말 탈퇴하시겠어요?</string>
    <string name="warning"> 탈퇴 시 계정은 14일 동안 유지되며, 이후에는 삭제\n 되어 복구되지 않습니다..</string>
    <string name="cancel"> 취소</string>
    <string name="quit"> 탈퇴</string>

    <!-- post -->
    <string name="post_type">Moment</string>
    <string name="user_name">이름</string>
    <string name="user_message">소중한 순간을 남겨보세요.</string>
    <string name="post_title">제목</string>
    <string name="post_content">내용을 입력하세요</string>

    <!-- home -->
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="post">post</string>
    <string name="profile">profile</string>
    <string name="date_ex">0000. 00. 00</string>
    <string name="ctgy_text">카테고리</string>
    <string name="ctgy_1">학교</string>
    <string name="ctgy_2">동아리</string>
    <string name="ctgy_3">자격증</string>
    <string name="user_name_ex_1">Oro</string>
    <string name="home_blog_detail_ex">TOEIC 52일차!\n단어 더 외우고 문법 공부하기..</string>
    <string name="planner_memo_ex_1">오늘 할 일을 입력해주세요.</string>
    <string name="planner_memo_ex_2">의미론 보강 온라인</string>
    <string name="save_btn">SAVE</string>
    <string name="delete_btn">DELETE</string>
    <string name="like_count_ex">7</string>

    <!--  캘린더  -->
    <string name="calendar">calendar</string>

    <!--  알림  -->
    <string name="agree">동의</string>
    <string name="disagree">거절</string>
    <string name="msg_1">고기좋아 님이 나를 응원하고 싶어합니다.</string>
    <string name="msg_2">Oro 님이 \u003c시험공부\u003e에 댓글을 남겼습니다.</string>
    <string name="msg_3">Oro 님이 \u003c시험공부\u003e에 공감합니다.</string>
    <string name="msg_4">Oro 님이 나를 응원하고 싶어합니다.</string>
    <string name="noti_qna_1">님을 동시 응원하시겠습니까?</string>
    <string name="noti_accept">동시 응원</string>
    <string name="noti_cancel">거절</string>

    <!--  검색  -->
    <string name="hint">닉네임 또는 키워드 검색</string>
    <string name="name_1">고기좋아</string>
    <string name="name_2">소피</string>
    <string name="recent_word">최근 검색어</string>
    <string name="name_3">정희이야기</string>

    <!-- 팝업 -->
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>

    <!-- 댓글 -->
    <string name="comment">댓글 내용</string>
    <string name="reply">답글</string>
    <string name="put">등록</string>
    <string name="enter">댓글 입력</string>

</resources>