<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/state_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/noti_question_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/accept_btn">

                <TextView
                    android:id="@+id/noti_nickname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/pretendard_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/noti_question_tv"/>

                <TextView
                    android:id="@+id/noti_question_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_qna_1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/pretendard_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/noti_nickname_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="5dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/accept_btn"
                android:layout_width="105dp"
                android:layout_height="31dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/main_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel_btn"
                app:layout_constraintTop_toBottomOf="@id/noti_question_wrapper"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/accept_btn_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/noti_accept"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/pretendard_medium"
                    android:layout_gravity="center"
                    android:gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cancel_btn"
                android:layout_width="105dp"
                android:layout_height="31dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                android:backgroundTint="@color/main_2"
                app:layout_constraintTop_toTopOf="@id/accept_btn"
                app:layout_constraintBottom_toBottomOf="@id/accept_btn"
                app:layout_constraintStart_toEndOf="@id/accept_btn"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/cancel_btn_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/noti_cancel"
                    android:textColor="@color/state_2"
                    android:textSize="14sp"
                    android:fontFamily="@font/pretendard_medium"
                    android:layout_gravity="center"
                    android:gravity="center"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>