<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_2">

    <!-- 스크롤 가능 영역 -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <!-- 게시물 유형 -->
            <TextView
                android:id="@+id/postType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_type"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/pretendard_bold"
                android:layout_gravity="center_horizontal" />

            <!-- 게시물 제목 -->
            <TextView
                android:id="@+id/postTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/post_title"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:fontFamily="@font/pretendard_medium"
                android:paddingBottom="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent" />

            <!-- 프로필 정보 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/post_blog_friend_cv"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    app:cardElevation="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="1000dp">

                        <ImageView
                            android:id="@+id/post_blog_friend_iv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_friend_3"/>

                </androidx.cardview.widget.CardView>

<!--                <ImageView-->
<!--                    android:id="@+id/profileImage"-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:src="@drawable/ic_profile"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent" />-->

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="16sp"
                    android:fontFamily="@font/pretendard_medium"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/post_blog_friend_cv"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/profileDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_ex"
                    android:textSize="12sp"
                    android:fontFamily="@font/pretendard_medium"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@id/profileName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp" />

                <ImageView
                    android:id="@+id/optionsButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/post_hr_v"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/home_planner_content"
                app:layout_constraintTop_toBottomOf="@id/home_planner_ctgy_topbar"/>

            <!-- ViewPager2 -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                android:visibility="visible" />

            <!-- 게시물 내용: 슬라이드가 없을 때 사용 -->
            <TextView
                android:id="@+id/postContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/pretendard_medium"
                android:singleLine="false"
                android:padding="8dp"
                android:gravity="top"
                android:visibility="gone"
                android:background="@color/transparent"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>

    <!-- 하단 버튼 영역 -->
    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/buttonHand"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:src="@drawable/ic_hand"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/likeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"/>

        <ImageButton
            android:id="@+id/buttonReply"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_reply" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
